2008-09-19  Heikki Junnila  <hjunnila@users.sf.net>

	* main/inputmap.cpp:

	Fixed a crash bug during InputMap::saveXML().

2008-09-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/midiinputevent.cpp:
	* libs/midiinput/midiinputevent.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/win32-mididevice.cpp:

	Removed the "alive" flag from MIDIInputevent.
	Moved some event reading stuff from midiinput.cpp to
	unix-midiinput.cpp.
	
2008-09-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/mididevice.h:
	* libs/midiinput/midiinput.h:
	* libs/midiinput/midiinput.pro:
	* libs/midiinput/midipoller.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/unix-mididevice.h:
	* libs/midiinput/unix-midiinput.cpp:
	* libs/midiinput/unix-midiinput.h:
	* libs/midiinput/unix-midipoller.cpp:
	* libs/midiinput/unix-midipoller.h:

	Renamed midi*.h files to unix-*.h.

2008-09-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/midipoller.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/unix-midiinput.cpp:

	Fixed unix midi plugin compilation problems.

2008-09-15  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/mididevice.h:
	* libs/midiinput/midiinput.h:
	* libs/midiinput/midipoller.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/unix-midiinput.cpp:

	Just small compile-time fixes for midi input plugin.

2008-09-09  Heikki Junnila  <hjunnila@users.sf.net>

	* main/fixturemanager.cpp:

	The first fixture is selected in fixture manager by default unless
	something else is wanted.

2008-09-09  Heikki Junnila  <hjunnila@users.sf.net>

	* main/vccuelistproperties.cpp:

	Fixed a crash that occurred when the skip key was detached and then
	delete was attempted in destructor on an already deleted m_keyBind.

2008-09-02  Heikki Junnila  <hjunnila@users.sf.net>

	* main/vcwidget.cpp:

	Fixed VCWidget background color saving/loading.

2008-08-26  Heikki Junnila  <hjunnila@users.sf.net>

	* main/addfixture.cpp: